2008-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  New module; replaces checker._allModules
	  Allows us to track and differentiate between modules with the same
	  name but from different paths.
	* pychecker/checker.py:
	  Use it instead of _allModules
	* pychecker/warn.py:
	  Also use it in the code that checks if a base class's __init__ was
	  called, instead of only checking sys.modules, which only works
	  if we pollute sys.modules (which is what we're trying to fix)

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Instantiate Class with the PycheckerModule instance instead of the
	  real module; this allows us to see and act on presence of moduleDir.

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Change _findModule to take an optional moduleDir keyword argument.
	  Use it in setupMainCode
	  Make sibling imports work by temporarily putting moduleDir on
	  sys.path

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Add self.moduleDir to filename() for PyCheckerModule.

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Refactor code such that we can pass a moduleDir keyword argument to
	  PyCheckerModule.  This will allow us to discern between modules
	  with the same name, but in a different directory.
	  Change allModules to be a dict of (moduleName, moduleDir) -> module
	  No behaviour change yet.

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  When showing what we're processing, show module name and file name.
	* test_expected/test1:
	* test_expected/test1-2.3:
	* test_expected/test1-2.4:
	* test_expected/test1-2.5:
	* test_expected/test10:
	* test_expected/test100:
	* test_expected/test101:
	* test_expected/test11:
	* test_expected/test12:
	* test_expected/test13: