@@ -1,4 +1,4 @@
-Processing test_zope_interface...
+Processing module test_zope_interface (test/input/test_zope_interface.py)...
 
 Warnings...
 
